Upload lần thứ hai

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <title>Biểu mẫu Tìm kiếm GG</title>
 </head>
 <body>
-<div align="center" >
-    <h1>TÌM KIẾM</h1>
-    <form action="www.google.com" method="get" >
-        <input type="search" name="ggsearch" placeholder="Nhập từ khóa tìm kiếm...">
+<br><br>
+
+<div align="center">
+    <h1> GOOGLE</h1>
+    <form action="https://www.google.com/search" method="get">
+        <input id="name" type="text" style="width: 300px" placeholder="Enter Keyword...">
+        <input type="submit" value="Search">
     </form>
 </div>
 </body>
